==> jlaskowski/Nerdkit/archive/code/Wifi/spi.c <==
#define F_CPU 14745600
#include <avr/io.h>
#include <avr/pgmspace.h>
#include <avr/interrupt.h>
#include <inttypes.h>
#include <string.h>
#include "../libnerdkits/delay.h"
#include "../libnerdkits/lcd.h"
#include "../libnerdkits/uart.h"
#include "../libnerdkits/io_328p.h"
#include "../CC3000HostDriver/cc3000_common.h"
#include "../CC3000HostDriver/hci.h"
#include "../CC3000HostDriver/evnt_handler.h"
#include "../libnerdkits/io_328p.h"
#include "spi.h"
#include "ui.h"
#define HI(value)               (((value) & 0xFF00) >> 8)
#define LO(value)               ((value) & 0x00FF)
#define READ                    3
#define WRITE                   1
#define HEADERS_SIZE_EVNT       (SPI_HEADER_SIZE + 5)
#define ASSERT_CS()    (PORTB &= ~(PB2 << 1))
#define DEASSERT_CS()  (PORTB |=  (PB2 << 1))
#define 	eSPI_STATE_POWERUP 				 (0)
#define 	eSPI_STATE_INITIALIZED  		 (1)
#define 	eSPI_STATE_IDLE					 (2)
#define 	eSPI_STATE_WRITE_IRQ	   		 (3)
#define 	eSPI_STATE_WRITE_FIRST_PORTION   (4)
#define 	eSPI_STATE_WRITE_EOT			 (5)
#define 	eSPI_STATE_READ_IRQ				 (6)
#define 	eSPI_STATE_READ_FIRST_PORTION	 (7)
#define 	eSPI_STATE_READ_EOT				 (8)

long SpiFirstWrite(unsigned char* pUserBuffer, unsigned short usLength) {

    if (pUserBuffer != wlan_tx_buffer) {
        memcpy(wlan_tx_buffer,pUserBuffer, usLength);
	}
    wlan_tx_buffer_len = usLength;


    delay_ms(7);  // time to wait after IRQ goes low before asserting CS (per TiWi_SL Datasheet, though it's contradictory)

	// The master asserts CS.
	ASSERT_CS();

	// The master introduces a delay of at least 50 µs before starting actual transmission of data. (as per "CC3000 Serial Port Interface (SPI)")
	delay_us(50);

	SpiWriteReadByte(wlan_tx_buffer[0]);
	SpiWriteReadByte(wlan_tx_buffer[1]);
	SpiWriteReadByte(wlan_tx_buffer[2]);
	SpiWriteReadByte(wlan_tx_buffer[3]);

	// The master introduces a delay of at least an additional 50 µs.
	delay_us(50);

	// The master transmits the rest of the packet, starting with the last byte of the header...
	SpiWriteReadByte(wlan_tx_buffer[4]);

	// ...followed by the payload, which may include a pad byte so the whole packet has an even number of bytes
	int i;
	for(i=5; i < wlan_tx_buffer_len; ++i) {
	   SpiWriteReadByte((unsigned char)wlan_tx_buffer[i]);
	}

	sSpiInformation.ulSpiState = eSPI_STATE_IDLE;

	// After the last byte of data, the nCS is deasserted by the master.
	DEASSERT_CS();

	return(0);
}

void init_spi() {

    // Clear PRSPI (in Power Reduction Register) to enable SPI module power
    PRR &= ~(1<<PRSPI);

    // PB5 (pin 19) = SCK (Master clock output)
    // Set DDB5 on Data Direction Register for Port B (DDRB) to configure PB5 as output
    DDRB |= (1<<DDB5);

    // PB4 (pin 18) = MISO (master input) does not need to be configured to be input when MCU is SPI Master

    // PB3 (pin 17) = MOSI (master output) (DDB3 must be set properly for this to be output)
	//PORTB &= ~(1<<PB3);
    DDRB |= (1<<DDB3);

    // PB2  (pin 16) = SS (slave select) (DDB2 must be set properly for this to be output)
    DDRB |= (1<<DDB2);

	// Enable SPI, set it as Master
	SPCR = (1<<SPE)|(1<<MSTR);

	// Set slave select (SS), which is also known as Chip Select (CS) as high (which means slave not selected)
    DEASSERT_CS();

	// Make SPI Data Transmission Order to be Most Significant Bit First (MSB)
	SPCR &= ~(1<<DORD);

	// Set SPI clock characteristics as per CC3000 requirements
	SPCR &= ~(1<<CPOL);
	SPCR |= (1<<CPHA);

	// set SPI Clock with fastest speed
	SPCR |= (1<<SPR1);
	SPCR |= (1<<SPR0);

    // do NOT double the speed
	SPSR &= ~(1<<SPI2X);

	// configure Port C3 (CC3000 PWR_EN) as output
	DDRC |= (1<<DDC3);

	// configure Port D2 (CC3000 SPI_IRQ) as input
	DDRD &= ~(1<<DDD2);

	// activate the pull-up resistor on Port D2
    PORTD |= (1<<PD2);

    // enable interrupt from CC3000's SPI_IRQ on PD2
    PCICR |= (1<<PCIE2);   //Enable PCINT2
    PCMSK2 |= (1<<PCINT18); //Trigger on change of PCINT18 (PD2)

    sei();  // enable global interrupts
}

void SpiPauseSpi() {
  PCICR &= ~(1<<PCIE2);
}

void SpiResumeSpi() {
  PCICR |= (1<<PCIE2);
}
