==> jlaskowski/Nerdkit/installs/CC3000 TiWi-SL/ti/CC3000SDK/CC3000 SDK/MSP430FR5739/Basic WiFi Application/Basic WiFi Source/Source/CC3000 Spi/spi.c <==
#include "hci.h"
#include "spi.h"
#include "evnt_handler.h"
#include "board.h"
#include <msp430.h>
#define READ                    3
#define WRITE                   1
#define HI(value)               (((value) & 0xFF00) >> 8)
#define LO(value)               ((value) & 0x00FF)
#define ASSERT_CS()          (P1OUT &= ~BIT3)
#define DEASSERT_CS()        (P1OUT |= BIT3)
#define HEADERS_SIZE_EVNT       (SPI_HEADER_SIZE + 5)
#define SPI_HEADER_SIZE			(5)
#define 	eSPI_STATE_POWERUP 				 (0)
#define 	eSPI_STATE_INITIALIZED  		 (1)
#define 	eSPI_STATE_IDLE					 (2)
#define 	eSPI_STATE_WRITE_IRQ	   		 (3)
#define 	eSPI_STATE_WRITE_FIRST_PORTION   (4)
#define 	eSPI_STATE_WRITE_EOT			 (5)
#define 	eSPI_STATE_READ_IRQ				 (6)
#define 	eSPI_STATE_READ_FIRST_PORTION	 (7)
#define 	eSPI_STATE_READ_EOT				 (8)
#define CC3000_BUFFER_MAGIC_NUMBER (0xDE)

int init_spi(void)
{
	// Select the SPI lines: MISO/MOSI on P1.6,7 
	MOSI_MISO_PORT_SEL |= (SPI_MISO_PIN + SPI_MOSI_PIN);
	MOSI_MISO_PORT_SEL2 &= (~(SPI_MISO_PIN + SPI_MOSI_PIN));
	//CLK on P2.2
	SPI_CLK_PORT_SEL |= (SPI_CLK_PIN);
	SPI_CLK_PORT_SEL2 &= ~SPI_CLK_PIN;
	
	UCB0CTLW0 |= UCSWRST;                     // Put state machine in reset
	UCB0CTLW0 |= (UCMST+UCSYNC+UCMSB);      	// 3-pin, 8-bit SPI master
	// Clock polarity high, MSB
	UCB0CTLW0 |= UCSSEL_2;                    // ACLK
	UCB0BR0 = 0x02;                           // /2 change to /1
	UCB0BR1 = 0;                              //
	
	UCB0CTLW0 &= ~UCSWRST;                    //Initialize USCI state machine
	
	return(ESUCCESS);
}

long
SpiFirstWrite(unsigned char *ucBuf, unsigned short usLength)
{
	// workaround for first transaction
	ASSERT_CS();
	
	// Assuming we are running on 24 MHz ~50 micro delay is 1200 cycles;
	__delay_cycles(1200);
	
	// SPI writes first 4 bytes of data
	SpiWriteDataSynchronous(ucBuf, 4);
	
	__delay_cycles(1200);
	
	SpiWriteDataSynchronous(ucBuf + 4, usLength - 4);
	
	// From this point on - operate in a regular way
	sSpiInformation.ulSpiState = eSPI_STATE_IDLE;
	
	DEASSERT_CS();
	
	return(0);
}

void 
SpiPauseSpi(void)
{
	SPI_IRQ_PORT &= ~SPI_IRQ_PIN;
}

void 
SpiResumeSpi(void)
{
	SPI_IRQ_PORT |= SPI_IRQ_PIN;
}
